# war_thunder_camouflage_installer

./: .gitattributes  .gitignore  Cargo.toml  METRICS.md  README.MACOSX.md  README.md  TAGS.json  TODO.md  TREE.md  build_script.py  build_script_v1.py  check.py  deps.bat  git-release.py  print_project.py  project_metrics.py  project_metrics_history.csv
.file_contents_output/: latest_file_contents.txt
.repo_summary/: consolidated_summary.txt
UserSkins/WasteDog/germ_pzkpfw_VI_ausf_b_tiger_IIp - germ_pzkpfw_VI_ausf_b_tiger_IIp/TIGER2P-AshArms/: fliegerbeschussgerat_41.tga  germ_pzkpfw_VI_ausf_b_tiger_IIp.blk  pzkpfw_vi_ausf_b_tiger_gun.dds
docs/: METRICS.md  README.MACOSX.md  TODO.md
scripts/: build_script.py  print_project.py  project_metrics.py
skins_dir_testing/beaufighter/: beaufighter_mk21.blk
src/: MESSAGES_TEMPLATE.TXT  data.rs  database.rs  file_operations.rs  image_utils.rs  links_to_platforms_and_formns.txt  main.rs  path_utils.rs  tags.rs  ui.rs  war_thunder_utils.rs
src/ui/: app.rs  components.rs  database_handlers.rs  file_handlers.rs  handlers.rs  image_handlers.rs  layout.rs  mod.rs  navigation_handlers.rs  popup_handlers.rs  utility_handlers.rs
src/ui/handlers/: database_handlers.rs  file_handlers.rs  general_handlers.rs  image_handlers.rs  mod.rs  navigation_handlers.rs  popup_handlers.rs  utility_handlers.rs
