[package]
name = "war_thunder_camo_installer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22.0", features = ["persistence"] }
egui = "0.22.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
ehttp = "0.2.0"
image = "0.24.6"
base64 = "0.21.0"
rfd = "0.9"
zip = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winuser", "windef"]